# precice-generate

./: FileGenerator.py  README.md  cli.py  file_generator.py  format.py  pyproject.toml
.github/workflows/: check.yml  installation.yml  temp.yml
controller_utils/examples/1/: precice-config.xml
controller_utils/examples/2/: precice-config.xml  topology.yaml
controller_utils/examples/3/: precice-config.xml  topology.yaml
controller_utils/examples/4/: topology.yaml
controller_utils/examples/5/: name.txt  topology.yaml
controller_utils/precice_struct/: PS_CouplingScheme.py  PS_Mesh.py  PS_ParticipantSolver.py  PS_PreCICEConfig.py  PS_QuantityCoupled.py
controller_utils/ui_struct/: UI_Coupling.py  UI_SimulationInfo.py  UI_UserInput.py
examples/0/: README.md  precice-config.xml  topology.yaml
examples/1/: README.md  topology.yaml
examples/2/: README.md
examples/3/: README.md  topology.yaml
examples/4/: README.md  precice-config.xml  topology.yaml
examples/5/: README.md  precice-config.xml  topology.yaml
examples/expert/1/: precice-config.xml  topology.yaml
examples/expert/2/: topology.yaml
examples/expert/4/: README.md  precice-config.xml
examples/expert/5/: README.md  precice-config.xml  topology.yaml
generation_utils/: Logger.py  __init__.py  config_generator.py  file_generator.py  format_precice_config.py  readme_generator.py  structure_handler.py
schemas/: README.md  topology-schema.json
src/: main.py  mesh.py  participant.py  precice_config.py  topology_input.py
tests/generation-tests/: test_generation.py
