[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "precice-generate"
description = "Generates File and Folder Structure, including all of the necessary files to quickly kickstart a simulation"
version = "1.0.0"

readme = "README.md"
license = {text = "MIT"}

authors = [
    { name = "VanLaareN", email = "vanlaren@example.com" },
    { name = "Toddelismyname", email = "116207910+Toddelismyname@users.noreply.github.com" }
]

requires-python = ">= 3.10"
dependencies = [
    "jsonschema==4.23.0",
    "lxml==5.3.0",
    "myutils==0.0.21",
    "termcolor==2.5.0",
]

[project.scripts]
precice-gen = "cli:main"

[project.urls]
Repository = "https://github.com/precice-forschungsprojekt/precice-generate"
Issues = "https://github.com/precice-forschungsprojekt/precice-generate/issues"
Documentation = "https://github.com/precice-forschungsprojekt/precice-generate/blob/main/README.md"

[tool.setuptools]
py-modules = [
    "cli",
    "generation_utils.adapter_config_generator",
    "generation_utils.format_precice_config",
    "generation_utils.logger",
    "generation_utils.structure_handler",
    "generation_utils.other_files_generator",
    "generation_utils.config_generator",
    "generation_utils.readme_generator",
    "generation_utils.file_generator",
    "controller_utils.myutils.UT_PCErrorLogging",
    "controller_utils.precice_struct.PS_CouplingScheme",
    "controller_utils.precice_struct.PS_Mesh",
    "controller_utils.precice_struct.PS_ParticipantSolver",
    "controller_utils.precice_struct.PS_PreCICEConfig",
    "controller_utils.precice_struct.PS_QuantityCoupled",
    "controller_utils.ui_struct.UI_Coupling",
    "controller_utils.ui_struct.UI_Participant",
    "controller_utils.ui_struct.UI_SimulationInfo",
    "controller_utils.ui_struct.UI_UserInput"
]